// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button Component Snapshots > renders button with icons correctly 1`] = `
<div>
  <button
    class="btn btn-primary btn-medium"
  >
    <span
      class="btn-icon btn-icon-left"
    >
      <span
        data-testid="left-icon"
      >
        ←
      </span>
    </span>
    <span
      class="btn-text"
    >
      Button with Icons
    </span>
    <span
      class="btn-icon btn-icon-right"
    >
      <span
        data-testid="right-icon"
      >
        →
      </span>
    </span>
  </button>
</div>
`;

exports[`Button Component Snapshots > renders disabled button correctly 1`] = `
<div>
  <button
    class="btn btn-primary btn-medium"
    disabled=""
  >
    <span
      class="btn-text"
    >
      Disabled Button
    </span>
  </button>
</div>
`;

exports[`Button Component Snapshots > renders full width button correctly 1`] = `
<div>
  <button
    class="btn btn-primary btn-medium btn-full-width"
  >
    <span
      class="btn-text"
    >
      Full Width Button
    </span>
  </button>
</div>
`;

exports[`Button Component Snapshots > renders loading button correctly 1`] = `
<div>
  <button
    class="btn btn-primary btn-medium btn-loading"
    disabled=""
  >
    <span
      aria-hidden="true"
      class="btn-spinner"
    >
      <svg
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          fill="none"
          r="10"
          stroke="currentColor"
          stroke-dasharray="42"
          stroke-dashoffset="14"
          stroke-width="4"
        >
          <animatetransform
            attributeName="transform"
            dur="1s"
            from="0 12 12"
            repeatCount="indefinite"
            to="360 12 12"
            type="rotate"
          />
        </circle>
      </svg>
    </span>
    <span
      class="btn-text"
    >
      Loading Button
    </span>
  </button>
</div>
`;

exports[`Button Component Snapshots > renders primary button correctly 1`] = `
<div>
  <button
    class="btn btn-primary btn-medium"
  >
    <span
      class="btn-text"
    >
      Primary Button
    </span>
  </button>
</div>
`;

exports[`Button Component Snapshots > renders secondary button correctly 1`] = `
<div>
  <button
    class="btn btn-secondary btn-medium"
  >
    <span
      class="btn-text"
    >
      Secondary Button
    </span>
  </button>
</div>
`;
